# noclip-auto

./: .cursor-session-state.example.json  .cursorignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .template-update.json  AGENTS.md  AGENT_MEMORY.md  BUILD_PLAN.md  CHANGELOG.md  CODE_REVIEW.md.example  COMPLETED_TASKS.md  CONTRIBUTING.md  DECISION_LOG.md  KNOWLEDGE_BASE.md  LICENSE  PROMPT_LIBRARY.md  README.md  RELEASE_NOTES.md.example  SECURITY.md  TEMPLATE_INDEX.json  THIRD_PARTY_LICENSES.md
.cursor/: AGENTS.md  cursor-features.json  stack-selection.json
.github/: CODEOWNERS  dependabot.yml
NoClipAuto.lrdevplugin/: Info.lua  Init.lua  InitSmokeWatch.lua  M3SmokeHeadless.lua  M5SmokeBootstrap.lua  M8SmokeBootstrap.lua  M9SmokeBootstrap.lua  PluginInfoProvider.lua  ProcessDevelop.lua  ProcessLibrary.lua  ProcessM3Smoke.lua  ProcessM5Smoke.lua  ProcessM8Smoke.lua  ProcessM9Smoke.lua  UrlHandler.lua
docs/: AGENT_MEMORY.md  ALGORITHM.md  BATCH_COMMANDS.md  BOOTSTRAP_ALIGNMENT.md  BOOTSTRAP_TEMPLATE_MAP.md  BUILD_PLAN.md  BUILD_PLAN_COMPLETED.md  CHANGELOG.md  CURSOR_MODES.md  FEATURE_MODULES.md  FILE_SIZE_GUIDE.md  FOR_AGENTS.md  FOSS.md  GATES.md  GITHUB.md  GITHUB_ABOUT.md  INITIALIZATION_PROMPT.md  LR_TESTING.md  MAC.md  PARALLEL_AGENT_SCOPES.md  PRIVACY.md  RUNBOOK.md  SECURITY_TRIAGE.md  SETTINGS_UI.md  START_HERE.md  THREAT_MODEL.md
noclip-analyze/: Cargo.toml
noclip-analyze/src/: analyze.rs  batch.rs  main.rs
scripts/: NoClipAuto-shortcuts.ahk  agent-progress.sh  archive-completed-tasks.ps1  bench-analyzer.ps1  (+57 more)
(+98 files in other folders)
