[package]
name = "noclip-analyze"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Clipped-pixel counter for NoClip Auto Lightroom plugin"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-bench]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
